# fpcalc

./: .gitmodules  LICENSE  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/lalilu/fpcalc/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/lalilu/fpcalc/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
fpcalc/: build.gradle.kts  consumer-rules.pro  proguard-rules.pro
fpcalc/src/androidTest/java/com/lalilu/fpcalc/: ExampleInstrumentedTest.kt
fpcalc/src/main/cpp/: CMakeLists.txt  fpcalc.cpp  fpcalc_jni.cpp  fpcalc_jni.h  fpcalc_reader.cpp  fpcalc_reader.h
fpcalc/src/main/java/com/lalilu/fpcalc/: Fpcalc.kt
fpcalc/src/test/java/com/lalilu/fpcalc/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
